<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="text_titulo">Minha Lista</string>
    <string name="text_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="text_hint_edit_sobrenome">Sobre Nome</string>
    <string name="text_hint_edit_curso">Nome do Curso Desejado</string>
    <string name="text_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="text_button_limpar">Limpar</string>
    <string name="text_hint_edit_salvar">Salavar</string>
    <string name="text_button_salvar">Salvar</string>
    <string name="text_hint_edit_enviar">ENVIAR</string>
    <string name="selecione_um_curso">Selecione um curso..</string>
    <string name="txt_selecione_um_curso" />

</resources>