<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:text="@string/text_titulo"
        android:textColor="#373737"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/text_hint_edit_primeiro_nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="28dp" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/text_hint_edit_sobrenome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="127dp" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/text_hint_edit_curso"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="85dp" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint="@string/text_hint_edit_telefone_de_contato"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="95dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="@color/corBotoes"
        android:text="@string/text_button_limpar"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
        app:layout_constraintVertical_bias="0.047"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:text="@string/text_hint_edit_salvar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="536dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="95dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="@color/corBotoes"
        android:text="@string/text_button_salvar"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
        app:layout_constraintVertical_bias="0.047"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="300dp" />

</androidx.constraintlayout.widget.ConstraintLayout>